--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,30 @@
-body {
+* {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  box-sizing: border-box; }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
+:root {
+  font-size: calc(1rem + ((1vw - 0.3rem) * 1.1111));
+  /* Prevent font from scaling beyond this breakpoint */ }
+  @media only screen and (min-width: 769px) {
+    :root {
+      font-size: calc(1rem + ((1vw - 0.6rem) * 1.1111)); } }
+
+body {
+  font-family: "Inter UI", sans-serif;
+  line-height: 1.4;
+  font-kerning: normal;
+  background-color: #1f95d4;
+  color: #021a52; }
+
+input {
+  -webkit-appearance: none; }
+
+ul {
+  list-style-type: none; }
+
+.wrapper {
+  width: 100vw;
+  min-height: 100vmax;
+  padding: 1em;
+  text-align: center; }
